--- a/Sources/Nested/typesystem.tex
+++ b/Sources/Nested/typesystem.tex
@@ -360,9 +360,7 @@ observation: incoherence can only originate in merges. Therefore disjointness
 checking is only necessary in \rref{T-merge}.
 
 
-
-
 % Local Variables:
-% TeX-master: "../paper"
-% org-ref-default-bibliography: ../paper.bib
+% TeX-master: "../../Thesis"
+% org-ref-default-bibliography: ../../Thesis.bib
 % End:
