--- a/pl-theory.tex
+++ b/pl-theory.tex
@@ -61,7 +61,8 @@
 \newcommand{\valRR}[1]{\mathcal{V}\bra{#1}}
 \newcommand{\eeR}[2]{\mathcal{E}\bra{#1 ; #2}}
 \newcommand{\eeRR}[1]{\mathcal{E}\bra{#1}}
-\newcommand{\ggR}[2]{\mathcal{G}\bra{#1 ; #2}}
+\newcommand{\ggR}[1]{\mathcal{G}\bra{#1}}
+\newcommand{\ddR}[1]{\mathcal{D}\bra{#1}}
 
 \newcommand{\hll}[2][gray!40]{\colorbox{#1}{#2}}
 \newcommand{\hlmath}[2][gray!40]{%
